--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -74,30 +74,46 @@ body{
             }
             #from-input{
                 grid-area: fromInput;
-                height: 100%;
-                width: 100%;
-                box-sizing: border-box;
-                border: none;
-                padding-left: 5px;
-                font-size: 14px;
-                font-weight: 500;
-                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-                vertical-align: middle;
-                outline: none;
-                border-radius: 3px;
+
+                input{
+                    height: 100%;
+                    width: 100%;
+                    box-sizing: border-box;
+                    border: none;
+                    padding-left: 5px;
+                    font-size: 14px;
+                    font-weight: 500;
+                    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+                    vertical-align: middle;
+                    outline: none;
+                    border-radius: 3px;
+                    z-index: 7;
+                }
+                .autocomplete-results{
+                    z-index: 8;
+                }
+                
             }
             #to-input{
                 grid-area: toInput;
-                height: 100%;
-                width: 100%;
-                box-sizing: border-box;
-                border: none;
-                padding-left: 5px;
-                font-size: 14px;
-                font-weight: 500;
-                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-                outline: none;
-                border-radius: 3px;
+                
+                input{
+                    height: 100%;
+                    width: 100%;
+                    box-sizing: border-box;
+                    border: none;
+                    padding-left: 5px;
+                    font-size: 14px;
+                    font-weight: 500;
+                    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+                    vertical-align: middle;
+                    outline: none;
+                    border-radius: 3px;
+                    z-index: 7;
+                }
+                .autocomplete-results{
+                    z-index: 8;
+                }
             }
             #radius-from{
                 grid-area: rFrom;
