--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -259,6 +259,7 @@ body{
             box-shadow: 1px 0 3px rgba(0,0,0,0.12), 1px 0 2px rgba(0,0,0,0.24);
             transition: all 0.3s cubic-bezier(.25,.8,.25,1);
             user-select: none;
+            text-decoration: none;
 
 
 
