--- a/Core/client/src/assets/LandingPageStyles.scss
+++ b/Core/client/src/assets/LandingPageStyles.scss
@@ -78,7 +78,7 @@ body {
         padding: 10px;
         cursor: pointer;
         user-select: none;
-        
+
 
         &:hover {
             text-decoration: underline;
@@ -88,7 +88,7 @@ body {
 }
 
 .top-grid-container div {
-  //  border: 1px solid #fff;
+    //  border: 1px solid #fff;
 }
 
 .top-grid-container {
@@ -154,13 +154,13 @@ body {
             cursor: pointer;
             user-select: none;
             // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-            box-shadow: 0 20px 15px -6px rgba(0,0,0,0.19);
+            box-shadow: 0 20px 15px -6px rgba(0, 0, 0, 0.19);
 
-            &:active{
+            &:active {
                 transform: translateY(1px);
             }
 
-            p{
+            p {
                 font-family: $OpenSans;
                 color: $FontLight;
                 font-weight: 700;
@@ -169,16 +169,96 @@ body {
         }
     }
 }
-.alt-option{
+
+.alt-option {
     margin-right: 10px;
     text-decoration: underline;
     cursor: pointer;
 }
-.register-container{
+
+.signIn-register-container {
     width: 100%;
-    height: 300px;
+    height: 250px;
+    display: grid;
+    grid-template-columns: .5fr .5fr;
+    grid-auto-rows: 1fr;
+    grid-template-areas:
+        "left right";
+
+    .left {
+        grid-area: left;
+        border-right: 1px solid $PrimaryBlue;
+
+
+        #register-form {
+            text-align: center;
+        }
+
+        .signIn-register-input {
+            border: none;
+            width: 90%;
+            height: 45px;
+            margin: 5px;
+            padding-left: 5px;
+            -webkit-appearance: none;
+            outline: none;
+            font-size: 14px;
+            border: 1px solid #d9d9d9;
+            border-top: 1px solid #c0c0c0;
+            box-sizing: border-box;
+
+            &:hover {
+                border: 1px solid #b9b9b9;
+                border-top: 1px solid #a0a0a0;
+                -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+                -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+                box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+            }
+
+            &:focus {
+                border: 1px solid #b9b9b9;
+                border-top: 1px solid #a0a0a0;
+                -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+                -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+                box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+            }
+        }
+
+        .signIn-register-submit-btn {
+            width: 90%;
+            height: 45px;
+            background-color: $PrimaryGreen;
+            color: $FontLight;
+            border: none;
+            font-size: 20px;
+            font-weight: 600;
+            margin: 5px;
+            box-sizing: border-box;
+            cursor: pointer;
+            outline: none;
+        }
+    }
+
+    .right {
+        grid-area: right;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: column;
+
+        img{
+            width: 90%;
+            cursor: pointer;
+        }
+    }
 }
-.signIn-container{
-    width: 100%;
-    height: 300px;
+
+
+.sweet-modal {
+    background-color: #f7f7f7;
+
+}
+.sweet-modal.is-alert .sweet-content {
+    padding-top: 32px;
+    padding-bottom: 64px;
 }
