--- a/Core/client/src/assets/LandingPageStyles.scss
+++ b/Core/client/src/assets/LandingPageStyles.scss
@@ -1,27 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Fredoka+One');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,700');
-
-$Fredoka: 'Fredoka One',
-cursive;
-$OpenSans: 'Open Sans',
-sans-serif;
-$Nunito: 'Nunito',
-sans-serif;
-;
-
-$PrimaryBlue: #6487A5;
-$PrimaryGreen: #2ED199;
-$SecondaryBlue: #22B4DE;
-$FontDark: #4A4A4A;
-$FontLight: #FFFFFF;
-
-* {
-    margin: 0px;
-    padding: 0px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+@import 'GlobalStyles.scss';
 
 body {
     width: 100vw;
@@ -92,10 +69,6 @@ body {
             text-decoration-color: $PrimaryGreen;
         }
     }
-}
-
-.top-grid-container div {
-    //  border: 1px solid #fff;
 }
 
 .top-grid-container {
