--- a/Core/client/src/assets/AppPageStyles.scss
+++ b/Core/client/src/assets/AppPageStyles.scss
@@ -1,13 +1,10 @@
 @import 'GlobalStyles.scss';
 
-body{
-    width: 100vw;
-    height: 100vh;
-}
+
 .grid-container{
     display: grid;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     grid-template-columns: 300px 1fr;
     grid-template-rows: 100px 1fr;
     grid-template-areas: 
@@ -247,6 +244,7 @@ body{
             box-shadow: 1px 0 3px rgba(0,0,0,0.12), 1px 0 2px rgba(0,0,0,0.24);
             transition: all 0.3s cubic-bezier(.25,.8,.25,1);
             user-select: none;
+            color: #4A4A4A;
             text-decoration: none;
 
 
