--- a/Core/client/src/assets/AppPageStyles.scss
+++ b/Core/client/src/assets/AppPageStyles.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     grid-template-columns: 1.75fr 1fr;
-    grid-template-rows: 100px 125px 1fr;
+    grid-template-rows: 100px 110px 1fr;
     grid-template-areas: 
     "nav nav"
     "sortWrap ticketDetailsWrap"
@@ -165,6 +165,15 @@
         overflow-x: hidden;
         text-align: center;
 
+        &::-webkit-scrollbar {
+            width: 5px;  /* remove scrollbar space */
+            background: transparent;  /* optional: just make scrollbar invisible */
+        }
+        &::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, .3);
+            border-radius: 20px;
+        }
+
         #presearch-message{
             position: relative;
             top: 50%;
@@ -208,18 +217,21 @@
 .ticket{
     background-color: #ffffff;
     width: 90%;
-    height: 125px;
+    height: 140px;
     margin: 20px auto;
     border-radius: 20px;
     cursor: pointer;
     box-shadow: 0 1px 18px -5px rgba(0,0,0,0.3);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
+    text-decoration: none;
+    color: $FontDark;
+
     display: grid;
-    grid-template-columns: 20px .5fr 1.75fr 1fr .7fr;
+    grid-template-columns: 20px .5fr 1px 1.75fr 1fr .7fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
-    "hoverColor shortRoute fullRoute airlines price";
+    "hoverColor shortRoute divider fullRoute airlines price";
 
     div{
        // border: 1px solid red;
@@ -245,20 +257,116 @@
         flex-direction: column;
 
         p{
-            font-size: 30px;
+            font-size: 35px;
             font-weight: 800;
+        }
+    }
+    .ticket-vertical-divider{
+        grid-area: divider;
+        height: 100%;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+
+        div{
+            height: 80%;
+            border-left: 1px solid $PrimaryBlue;
         }
     }
     .ticket-full-route{
         grid-area: fullRoute;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        .full-route-arrow{
+           // margin: 0 10px;
+            transform: translateY(-8px);
+        }
+        .full-route-box-divider{
+            width: 90%;
+            display: block;
+            height: 1px;
+            border: 0;
+            border-top: 1px solid $PrimaryBlue;
+            padding: 0;
+            margin: 0;
+        }
+        .full-route-box{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            width: 100%;
+            height: 50%;
+
+            // &:nth-of-type(2){
+            //     border-top: 1px solid $PrimaryBlue;
+            // }
+
+            .full-route-departure-wrap, .full-route-arrival-wrap{
+                width: 75px;
+            }
+            .full-route-airport{
+                font-weight: 600;
+                font-size: 25px;
+            }
+            .full-route-short-date{
+                font-weight: 100;
+                font-size: 14px;
+                transform:translateY(-5px);
+            }
+
+            .full-route-stops-duration-wrap{
+                .full-route-stops{
+                    width: 100px;
+                    height: 28px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 5px;
+                    background-color: #E4E4E4;
+                    font-size: 17px;
+                    font-weight: 100;
+                    margin: 0 15px;
+                }
+                .full-route-duration{
+                    font-size: 14px;
+                }
+            }
+        }
     }
     .ticket-airlines{
         grid-area: airlines;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        .ticket-airline{
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
+            background-color: $SecondaryBlue;
+            margin: 2px;
+            color: $FontLight;
+            overflow: hidden;
+            max-width: 150px;
+            max-height: 22px;
+            border-radius: 20px;
+            p{
+                padding: 1px 15px;
+                font-size: 14px;
+
+            }
+        }
     }
     .ticket-price{
         grid-area: price;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
         border-bottom-right-radius: 20px;
         border-top-right-radius: 20px;
