--- a/Core/client/src/assets/AppPageStyles.scss
+++ b/Core/client/src/assets/AppPageStyles.scss
@@ -134,7 +134,7 @@
         }
       }
       #nav-profile-picture {
-        border: 1px solid #fff;
+        border: 2px solid #fff;
         background-color: #fff;
         width: 50px;
         height: 50px;
@@ -154,6 +154,78 @@
   #app-sort-wrap {
     grid-area: sortWrap;
     background-color: #e4e4e4;
+    display: grid;
+    grid-template-columns: 20px 150px 150px 1fr 1fr 20px;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    ". mainSorts stopSort departSort arriveSort .";
+
+    #main-sorts-wrap{
+      grid-area: mainSorts;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      .main-sort{
+        width: 90%;
+        height: 27%;
+        margin: 2px 0;
+        display:grid;
+        grid-template-columns: 10px 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: 
+        "sortLeft sortRight";
+        border-radius: 5px;
+        cursor: pointer;
+        background-color: #fff;
+
+        &:hover{
+          .main-sort-left{
+            background-color: $PrimaryGreen;
+          }
+        }
+
+        .main-sort-left{
+          grid-area: sortLeft;
+          border-top-left-radius: 5px;
+          border-bottom-left-radius: 5px;
+
+          .sort-checked{
+            background-color: $PrimaryGreen;
+             width: 100%;
+             height: 100%;
+             border-bottom-left-radius: 5px;
+             border-top-left-radius: 5px;
+          }
+        }
+        .main-sort-right{
+          grid-area: sortRight;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          p{
+            transform:translateX(-5px);
+            user-select: none;
+          }
+          .chosen-main-sort{
+            color: $SecondaryBlue;
+            font-weight: 800;
+          }
+        }
+
+      }
+    }
+    #sort-stops-wrap{
+      grid-area: stopSort;
+    }
+    #sort-depart-airports{
+      grid-area: departSort;
+    }
+    #sort-arrive-airports{
+      grid-area: arriveSort;
+    }
+
   }
   #app-tickets-wrap {
     grid-area: ticketsWrap;
@@ -199,14 +271,11 @@
 
     div {
     }
-    // #details-map-wrap {
-    //   grid-area: map;
-    // }
     #details-text-wrap {
       grid-area: textDetails;
       overflow-x: hidden;
       overflow-y: scroll;
-      padding-top: 50px;
+      padding-top: 30px;
 
       &::-webkit-scrollbar {
         width: 5px; /* remove scrollbar space */
@@ -216,7 +285,7 @@
         background: #9b9b9b;
         border-radius: 20px;
       }
-
+      
       .text-inner-wrap {
         width: 100%;
 
@@ -272,6 +341,9 @@
                 &:nth-of-type(2){
                   background-color: $PrimaryGreen;
                 }
+                &:nth-of-type(3){
+                  background-color: #FF6F59;
+                }
               }
             }
           }
@@ -282,7 +354,7 @@
             justify-content: center;
             align-items: center;
             margin: 0 auto;
-            border-radius: 30px;
+            border-radius: 5px;
             background-color: $PrimaryBlue;
 
             p {
@@ -297,13 +369,41 @@
       grid-area: buyBtn;
 
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
+      background-color: $PrimaryBlue;
+
+      #ticket-buy-btn-trip-brief{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+  
+        img{
+          transform: rotate(-90deg);
+          margin: 0 20px;
+          width: 20px;
+        }
+        p{
+          font-size: 25px;
+          font-weight: 800;
+          color: $FontLight
+        }
+  
+      }
+
+      #buy-btn-wrap-price{
+        font-size: 25px;
+        font-weight: 600;
+        margin: 0 20px;
+          color: $FontLight;
+        
+      }
 
       #buy-btn {
         text-decoration: none;
         border: none;
-        width: 60%;
+        width: 30%;
         height: 40px;
         display: flex;
         justify-content: center;
@@ -311,6 +411,7 @@
         border-radius: 5px;
         background-color: $PrimaryGreen;
         color: $FontLight;
+        margin-right: 20px;
         // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         cursor: pointer;
         p {
@@ -375,6 +476,14 @@
     border-bottom-left-radius: 20px;
     border-top-left-radius: 20px;
     transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+    .ticket-checked{
+      background-color: $PrimaryGreen;
+       width: 100%;
+       height: 100%;
+       border-bottom-left-radius: 20px;
+       border-top-left-radius: 20px;
+    }
   }
   .ticket-short-route {
     grid-area: shortRoute;
@@ -410,7 +519,7 @@
 
     .full-route-arrow {
       // margin: 0 10px;
-      transform: translateY(-8px);
+      transform: translateY(-9px);
     }
     .full-route-box-divider {
       width: 90%;
