--- a/Core/client/src/assets/AppPageStyles.scss
+++ b/Core/client/src/assets/AppPageStyles.scss
@@ -331,19 +331,18 @@
                 margin: 2px;
                 color: $FontLight;
                 overflow: hidden;
-                max-width: 150px;
                 max-height: 22px;
                 border-radius: 20px;
                 p {
                   padding: 1px 15px;
                   font-size: 14px;
                 }
-                &:nth-of-type(2){
-                  background-color: $PrimaryGreen;
-                }
-                &:nth-of-type(3){
-                  background-color: #FF6F59;
-                }
+              }
+              .leg-guaranteed{
+                background-color: $PrimaryGreen;
+              }
+              .leg-not-guaranteed{
+                background-color: #FF6B6B;
               }
             }
           }
