--- a/Core/client/src/assets/GlobalStyles.scss
+++ b/Core/client/src/assets/GlobalStyles.scss
@@ -17,6 +17,7 @@ $FontLight: #FFFFFF;
     padding: 0px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-family: $OpenSans;
 }
 body {
     font-family: $OpenSans;
