--- a/Core/client/src/assets/LandingPageStyles.scss
+++ b/Core/client/src/assets/LandingPageStyles.scss
@@ -165,6 +165,8 @@
     width: 100%;
     height: 85vh;
     display: grid;
+    z-index: 3;
+    margin-top: 50px;
     grid-template-columns: 1fr 375px 375px 375px 1fr;
     grid-template-rows: 500px 1fr;
     grid-template-areas: 
@@ -179,8 +181,7 @@
 
         .ticker{
             z-index: 2;
-            display: none;
-            // transform: translateY(-35px);
+            // display: none;
         }
         #ticker1-wrap{
             grid-area: ticker1;
@@ -204,6 +205,39 @@
 
 }
 
+.signIn-register-container{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: .5fr .5fr;
+    grid-gap: 10px;
+    grid-auto-rows: 1fr;
+    grid-template-areas:
+        "left right";
+    
+    // border: 1px solid black;
+
+    .left{
+        grid-area: left;
+        // border: 1px solid red;
+        padding-top: 3px;
+    }
+    .right{
+        grid-area: right;
+        // border: 1px solid red;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: column;
+
+        img {
+            width: 90%;
+            margin: 2px;
+            cursor: pointer;
+        }
+    }
+}
+/*
 .alt-option {
     margin-right: 10px;
     text-decoration: underline;
@@ -309,3 +343,4 @@
 .sweet-modal-tab-title {
     font-size: 20px;
 }
+*/
