--- a/Core/client/src/assets/LandingPageStyles.scss
+++ b/Core/client/src/assets/LandingPageStyles.scss
@@ -208,33 +208,20 @@
 .signIn-register-container{
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: .5fr .5fr;
-    grid-gap: 10px;
-    grid-auto-rows: 1fr;
-    grid-template-areas:
-        "left right";
-    
     // border: 1px solid black;
 
-    .left{
-        grid-area: left;
+    .provider-btn-wrap{
         // border: 1px solid red;
-        padding-top: 3px;
-    }
-    .right{
-        grid-area: right;
-        // border: 1px solid red;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        flex-direction: column;
+        margin-top: 10px;
 
-        img {
-            width: 90%;
-            margin: 2px;
-            cursor: pointer;
-        }
+        .provider-btn{
+            margin: 0 5px;
+        } 
+    }
+
+    #sign-in-forgot-password{
+        position: relative;
+        top: 10px;
     }
 }
 /*
@@ -344,3 +331,16 @@
     font-size: 20px;
 }
 */
+.sweet-modal {
+    background-color: #f7f7f7;
+
+}
+
+.sweet-modal.is-alert .sweet-content {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.sweet-modal-tab-title {
+    font-size: 20px;
+}
